update ui / fix darkmode issue on firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@
   }
 }
 
+body {
+  @apply dark:bg-gray-800 text-gray-800 dark:text-white;
+}
+
 .article h1,
 .article h2,
 .article h3 {
